@@ -15,5 +15,5 @@ SET(Blosc_USE_STATIC_LIBS   "ON")
 #SET(LUXRAYS_DISABLE_OPENCL TRUE)
 #SET(BUILD_LUXCORE_DLL TRUE)
 
-#SET(CMAKE_BUILD_TYPE "Debug")
-SET(CMAKE_BUILD_TYPE "Release")
+SET(CMAKE_BUILD_TYPE "Debug")
+#SET(CMAKE_BUILD_TYPE "Release")
