@@ -112,6 +112,7 @@
 * Fixed a problem when saving ALBEDO AOV
 * Fixed RoughGlass event types returned by material evaluation
 * Evaluated best radius in PhotonGI, ELVC and DLSC is not affected any more by border rendering
+* Fixed a crash when resuming scene rendering without PhotonGI enabled
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
